--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,194 @@
 <!-- should only be the container div not the html or body container -->
 
+  <div id="wrapper">
+   <!-- Side Bar Navigation -->
+    <nav
+        class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0"
+      >
+        <div class="container-fluid d-flex flex-column p-0">
+          <a
+            class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0"
+            href="#"
+            ><div class="sidebar-brand-icon rotate-n-15">
+              <i
+                class="fas fa-pencil-ruler flex-grow-1 flex-shrink-1 flex-fill"
+                data-bs-toggle="tooltip"
+                data-bss-tooltip=""
+                title="Home"
+              ></i>
+            </div>
+            <div class="sidebar-brand-text mx-3">
+              <span class="flex-grow-1 flex-shrink-1 flex-fill flex-wrap"
+                >Sewing Project <br />Manager</span
+              >
+            </div></a
+          >
+          <hr class="sidebar-divider my-0" />
+          <ul
+            class="navbar-nav text-light"
+            id="accordionSidebar"
+            style="color: rgb(255, 255, 255); font-weight: bold"
+          >
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="index.html"
+                style="color: rgb(255, 255, 255)"
+                ><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a
+              >
+            </li>
+            <li class="nav-item"></li>
+            <li class="nav-item">
+              <a class="nav-link" href="/projects.list.html"
+                ><i class="far fa-gem"></i><span>Stash</span></a
+              ><a class="nav-link" href="/projects.list.html"
+                ><i class="fas fa-shopping-bag"></i><span>Shopping</span></a
+              ><a class="nav-link" href="/projects.list.html"
+                ><i class="fas fa-th-list"></i><span>Projects</span></a
+              ><a class="nav-link" href="/projects.list.html"
+                ><i class="fas fa-dollar-sign"></i><span>Budget</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/profile.html"
+                ><i class="fas fa-user"></i><span>Profile</span></a
+              ><a class="nav-link" href="/login.html"
+                ><i class="far fa-user-circle"></i><span>Login</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/register.html"
+                ><i class="fas fa-user-circle"></i><span>Register</span></a
+              >
+            </li>
+          </ul>
+          <div class="text-center d-none d-md-inline">
+            <button
+              class="btn rounded-circle border-0"
+              id="sidebarToggle"
+              type="button"
+            ></button>
+          </div>
+        </div>
+    </nav>
+<!-- Top Navigation -->
+    <div class="d-flex flex-column " id="content-wrapper">
+        <div id="content ">
+          <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
+            <div class="container-fluid bg-primary">
+              <button  class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button">
+                <i class="fas fa-bars"></i>
+              </button>
+             <!-- search button & entry -->
+              <form class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search">
+                <div class="input-group">
+                  <input class="bg-light form-control border-0 small" type="text"  placeholder="Search for ..." />
+                  <button class="btn btn-primary py-0" type="button">
+                    <i class="fas fa-search"></i>
+                  </button>
+                </div>
+              </form>
+              <ul class="navbar-nav  flex-nowrap ms-auto">
+                <li class="nav-item dropdown d-sm-none no-arrow">
+                  <a
+                    class="dropdown-toggle nav-link"
+                    aria-expanded="false"
+                    data-bs-toggle="dropdown"
+                    href="#"
+                    ><i class="fas fa-search"></i
+                  ></a>
+                  <div
+                    class="dropdown-menu dropdown-menu-end p-3 animated--grow-in"
+                    aria-labelledby="searchDropdown"
+                  >
+                    <form class="me-auto navbar-search w-100">
+                      <div class="input-group">
+                        <input
+                          class="bg-light form-control border-0 small"
+                          type="text"
+                          placeholder="Search for ..."
+                        />
+                        <div class="input-group-append">
+                          <button class="btn btn-primary py-0" type="button">
+                            <i class="fas fa-search"></i>
+                          </button>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </li>
+
+                <div class="d-none d-sm-block topbar-divider"></div>
+                <li class="nav-item dropdown no-arrow">
+                  <div class="nav-item dropdown no-arrow">
+                    <a
+                      class="dropdown-toggle nav-link"
+                      aria-expanded="false"
+                      data-bs-toggle="dropdown"
+                      href="#"
+                      >
+<!-- TODO should show who is logged in -->
+                      <span class="d-none d-lg-inline me-2 text-white small"
+                        >Valerie Luna</span
+                      ><img
+                        class="border rounded-circle img-profile"
+                        src="/assets/img/avatars/avatar1.jpeg?h=0ecc82101fb9a10ca459432faa8c0656"
+                    /></a>
+                    <div
+                      class="dropdown-menu shadow dropdown-menu-end animated--grow-in"
+                    >
+                      <a class="dropdown-item" href="#"
+                        ><i
+                          class="fas fa-user fa-sm fa-fw me-2 text-gray-400"
+                        ></i
+                        >&nbsp;Profile</a
+                      ><a class="dropdown-item" href="#"
+                        ><i
+                          class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"
+                        ></i
+                        >&nbsp;Settings</a
+                      ><a class="dropdown-item" href="#"
+                        ><i
+                          class="fas fa-list fa-sm fa-fw me-2 text-gray-400"
+                        ></i
+                        >&nbsp;Activity log</a
+                      >
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="#"
+                        ><i
+                          class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"
+                        ></i
+                        >&nbsp;Logout</a
+                      >
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </nav>
+          <h1 style="padding: 5px; margin: 5px">Sewing Project Manager</h1>
 
 
+          <!-- Start: Body -->
 
+<app-login></app-login>
+          <H1>TEST JUST FOR THE MENUS AND FOOTER</H1>
+<app-dash></app-dash>
+<app-projects></app-projects>
+          <!-- End: Body -->
+        </div>
+        <footer class="bg-white sticky-footer">
+          <div class="container my-auto">
+            <div class="text-center my-auto copyright">
+              <span>Copyright © Sewing Project Manager 2022</span>
+            </div>
+          </div>
+        </footer>
+      </div>
+      <a class="border rounded d-inline scroll-to-top" href="#page-top"
+        ><i class="fas fa-angle-up"></i
+      ></a>
+    </div>
 
 <router-outlet></router-outlet>
 
