--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+/* imported from other style sheets */
+@import url("./assets/bootstrap/css/bootstrap.min.css");
+@import url("./assets/css/styles.min.css");
+
+
+
+
+
 
