profile, projectform & register

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -170,11 +170,13 @@
 
 
           <!-- Start: Body -->
-
-<app-login></app-login>
-          <H1>TEST JUST FOR THE MENUS AND FOOTER</H1>
-<app-dash></app-dash>
-<app-projects></app-projects>
+<!-- <app-profile></app-profile> -->
+<!-- <app-projectform></app-projectform> -->
+<app-register></app-register>
+<!-- <app-login></app-login> -->
+          <!-- <H1>TEST JUST FOR THE MENUS AND FOOTER</H1> -->
+<!-- <app-dash></app-dash> -->
+<!-- <app-projects></app-projects> -->
           <!-- End: Body -->
         </div>
         <footer class="bg-white sticky-footer">
