--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -172,7 +172,10 @@
           <!-- Start: Body -->
 <!-- <app-profile></app-profile> -->
 <!-- <app-projectform></app-projectform> -->
-<app-register></app-register>
+<!-- <app-register></app-register> -->
+<!-- <app-shopping></app-shopping> -->
+<!-- <app-stashform></app-stashform> -->
+<app-stash></app-stash>
 <!-- <app-login></app-login> -->
           <!-- <H1>TEST JUST FOR THE MENUS AND FOOTER</H1> -->
 <!-- <app-dash></app-dash> -->
