--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
             </div>
             <div class="sidebar-brand-text mx-3">
               <span class="flex-grow-1 flex-shrink-1 flex-fill flex-wrap"
-                >Sewing Project <br />Manager</span
+                >{{ title }}</span
               >
             </div></a
           >
@@ -166,7 +166,7 @@
               </ul>
             </div>
           </nav>
-          <h1 style="padding: 5px; margin: 5px">Sewing Project Manager</h1>
+          <h1 style="padding: 5px; margin: 5px">{{ title }}</h1>
 
 
           <!-- Start: Body -->
@@ -175,10 +175,10 @@
 <!-- <app-register></app-register> -->
 <!-- <app-shopping></app-shopping> -->
 <!-- <app-stashform></app-stashform> -->
-<app-stash></app-stash>
+<!-- <app-stash></app-stash> -->
 <!-- <app-login></app-login> -->
           <!-- <H1>TEST JUST FOR THE MENUS AND FOOTER</H1> -->
-<!-- <app-dash></app-dash> -->
+<!-- <app-dash></app-dash>dash -->
 <!-- <app-projects></app-projects> -->
           <!-- End: Body -->
         </div>
