--- a/src/app/projectform/projectform.component.html
+++ b/src/app/projectform/projectform.component.html
@@ -12,7 +12,7 @@
           data-bs-placement="right"
           title="Add only one project"
           for="project"
-          >Project Name</label
+          >{{ title }}  Name</label
         >
       </div>
       <div class="col-lg-3">
