--- a/src/app/stash/stash.component.html
+++ b/src/app/stash/stash.component.html
@@ -1,8 +1,6 @@
-<p>
-  stash works!
-</p>
+
 <div class="container-fluid">
-  <h3 class="text-dark mb-4">Stash List</h3>
+  <h3 class="text-dark mb-4">{{ title }} List</h3>
   <div class="card shadow">
     <div class="card-header py-3">
       <p class="text-primary m-0 fw-bold">
