--- a/src/app/stashform/stashform.component.html
+++ b/src/app/stashform/stashform.component.html
@@ -1,6 +1,6 @@
 
 
-<h1 style="padding: 5px; margin: 5px">What's in you stash?</h1>
+<h1 style="padding: 5px; margin: 5px">What's in you {{ title }}?</h1>
 <div class="container">
   <form>
     <div class="row" style="padding: 5px">
