--- a/src/app/dash/dash.component.html
+++ b/src/app/dash/dash.component.html
@@ -4,7 +4,7 @@
   <div
     class="d-sm-flex justify-content-between align-items-center mb-4"
   >
-    <h3 class="text-dark mb-0">Dashboard</h3>
+    <h3 class="text-dark mb-0">{{ title }} </h3>
     <a
       class="btn btn-primary btn-sm d-none d-sm-inline-block"
       role="button"
