--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,11 +1,11 @@
 
 
 <div class="container-fluid">
-  <h3 class="text-dark mb-4">Projects</h3>
+  <h3 class="text-dark mb-4">{{ title }} </h3>
   <div class="card shadow">
     <div class="card-header py-3">
       <p class="text-primary m-0 fw-bold">
-        List of Projects &amp; Status
+        List of {{ title }}  &amp; Status
       </p>
     </div>
     <div class="card-body">
