--- a/src/app/shopping/shopping.component.html
+++ b/src/app/shopping/shopping.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="container-fluid">
-  <h3 class="text-dark mb-4">Shopping List</h3>
+  <h3 class="text-dark mb-4">{{ title }}  List</h3>
   <div class="card shadow">
     <div class="card-header py-3">
       <p class="text-primary m-0 fw-bold">
