--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,15 +17,14 @@
                 title="Home"
               ></i>
             </div>
-            <div class="sidebar-brand-text mx-3">
-              <span class="flex-grow-1 flex-shrink-1 flex-fill flex-wrap"
-                >{{ title }}</span
-              >
-            </div></a
-          >
-          <hr class="sidebar-divider my-0" />
-          <ul
-            class="navbar-nav text-light"
+            <div class="sidebar-brand-textmt-3 pt-5">
+              <img src="../assets/img/g20687.png" width="30%" height="30%"/>
+              <span class="flex-grow-1 flex-shrink-1 flex-fill flex-wrap mx-3"> <br>Sewing Project
+            <br>Manager</span>
+            </div>
+          </a>
+          <hr class="sidebar-divider my-3" />
+          <ul class="navbar-nav text-light"
             id="accordionSidebar"
             style="color: rgb(255, 255, 255); font-weight: bold"
           >
@@ -82,7 +81,7 @@
              <!-- search button & entry -->
               <form class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search">
                 <div class="input-group">
-                  <input class="bg-light form-control border-0 small" type="text"  placeholder="Search for ..." />
+                  <input class="bg-white form-control border-2 small" type="text"  placeholder="Search for ..." />
                   <button class="btn btn-primary py-0" type="button">
                     <i class="fas fa-search"></i>
                   </button>
@@ -129,7 +128,7 @@
                       >
 <!-- TODO should show who is logged in -->
                       <span class="d-none d-lg-inline me-2 text-white small"
-                        >Valerie Luna</span
+                        >User</span
                       ><img
                         class="border rounded-circle img-profile"
                         src="/assets/img/avatars/avatar1.jpeg?h=0ecc82101fb9a10ca459432faa8c0656"
