added home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -169,6 +169,9 @@
 
 
           <!-- Start: Body -->
+          <!-- <H1>TEST JUST FOR THE MENUS AND FOOTER</H1> -->
+
+<app-home></app-home>
 <!-- <app-profile></app-profile> -->
 <!-- <app-projectform></app-projectform> -->
 <!-- <app-register></app-register> -->
@@ -176,8 +179,7 @@
 <!-- <app-stashform></app-stashform> -->
 <!-- <app-stash></app-stash> -->
 <!-- <app-login></app-login> -->
-          <!-- <H1>TEST JUST FOR THE MENUS AND FOOTER</H1> -->
-<!-- <app-dash></app-dash>dash -->
+<!-- <app-dash></app-dash> -->
 <!-- <app-projects></app-projects> -->
           <!-- End: Body -->
         </div>
