--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -171,9 +171,9 @@
           <!-- Start: Body -->
           <!-- <H1>TEST JUST FOR THE MENUS AND FOOTER</H1> -->
 
-<app-home></app-home>
+<!-- <app-home></app-home> -->
 <!-- <app-profile></app-profile> -->
-<!-- <app-projectform></app-projectform> -->
+<app-projectform></app-projectform>
 <!-- <app-register></app-register> -->
 <!-- <app-shopping></app-shopping> -->
 <!-- <app-stashform></app-stashform> -->
