--- a/src/app/shopping/shopping.component.html
+++ b/src/app/shopping/shopping.component.html
@@ -8,6 +8,7 @@
         Items that are needed for a project or just to refresh the
         stash.
       </p>
+      <!-- TODO when items are checked off the list as purchased add them to the stash list-->
     </div>
     <div class="card-body">
       <div class="row">
