--- a/src/app/stashform/stashform.component.html
+++ b/src/app/stashform/stashform.component.html
@@ -45,8 +45,8 @@
         </label>
       </div>
       <div class="col">
-        <input class="form-control" type="text" autocomplete="on" autofocus="on" style="margin: 3px"
-          [(ngModel)]="tag" />
+        <!-- <input class="form-control" type="text" autocomplete="on" autofocus="on" style="margin: 3px"
+          [(ngModel)]="tag" /> -->
         <button class="btn btn-primary" type="button" style="margin: 5px">
           {{ tag }}
         </button>
