--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
       <section class="container">
           <div class="flex-column">
               <div class="row">
+                <h2>It's around here... somewhere!</h2>
                   <div class="justify-content-between flex-wrap  align-items-top pb-2 mb-3 border-bottom">
                       <p class="lead">This is a project and supplies tracker for sewing projects but it can be used
                           for
