--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,24 +2,23 @@
 
   <div id="wrapper">
    <!-- Side Bar Navigation -->
-    <nav
-        class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
+    <nav class=" navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
         <div class="container-fluid d-flex flex-column p-0">
-          <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page"
-            class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0">
-                 <div class="sidebar-brand-text mt-2 mb-2 pt-5">
+          <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page"
+            class="p-4 navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0">
+                 <div class="p-3 sidebar-brand-text mt-2 mb-2 pt-5">
               <img src="../assets/img/g20687.png" width="30%" height="30%"/>
               <span class="flex-grow-1 flex-shrink-1 flex-fill flex-wrap mx-3">
                 <br>Sewing Project
-            <br>Manager
+                <br>Manager
           </span>
             </div>
           </a>
           <hr class="sidebar-divider my-3" />
-          <ul class="navbar-nav text-light" id="accordionSidebar" style="color: rgb(255, 255, 255); font-weight: bold">
+          <ul class="pt-2 navbar-nav text-light" id="accordionSidebar" style="color: rgb(255, 255, 255); font-weight: bold">
             <li class="nav-item">
-              <a routerLink="/dash" routerLinkActive="active" ariaCurrentWhenActive="page"
-                class="nav-link" style="color: rgb(255, 255, 255)">
+              <a routerLink="/dashboard" routerLinkActive="active" ariaCurrentWhenActive="page"
+              class="nav-link">
                 <i class="fas fa-tachometer-alt"></i>
                 <span> Dashboard</span>
                 </a>
@@ -45,40 +44,42 @@
               >
             </li>
             <li class="nav-item">
-              <a routerLink="/profile" routerLinkActive="active" ariaCurrentWhenActive="page" class="nav-link" >                <i class="fas fa-user"></i>
-                <span> Profile</span></a>
+              <a routerLink="/profile" routerLinkActive="active" ariaCurrentWhenActive="page" class="nav-link" >
+                 <i class="fas fa-user"></i>
+                <span> Profile</span>
+              </a>
                 <a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page" class="nav-link" >
                 <i class="far fa-user-circle"></i>
-                <span> Login</span></a
-              >
+                <span> Login</span>
+                </a>
             </li>
             <li class="nav-item">
               <a routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page" class="nav-link" >
                 <i class="fas fa-user-circle"></i>
                 <span> Register</span>
-                </a
-              >
+                </a>
             </li>
           </ul>
+          <!-- sidebar toggle -->
           <div class="text-center d-none d-md-inline">
-            <button
-              class="btn rounded-circle border-0"
-              id="sidebarToggle"
-              type="button">
+            <button class="btn rounded-circle border-0" id="sidebarToggle" type="button">
               <i class="fa-solid fa-arrow-left"></i>
           </button>
           </div>
         </div>
     </nav>
 <!-- Top Navigation -->
-    <div class="d-flex flex-column " id="content-wrapper">
+<!-- hamburger for mobile -->
+    <div class="d-flex flex-column" id="content-wrapper">
         <div id="content ">
           <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
             <div class="container-fluid bg-primary">
               <button  class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button">
                 <i class="fas fa-bars"></i>
               </button>
-             <!-- search button & entry -->
+
+              <!-- search button & entry -->
+
               <form class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search">
                 <div class="input-group">
                   <input class="bg-white form-control border-2 small" type="text"  placeholder="Search for ..." />
@@ -89,24 +90,14 @@
               </form>
               <ul class="navbar-nav  flex-nowrap ms-auto">
                 <li class="nav-item dropdown d-sm-none no-arrow">
-                  <a
-                    class="dropdown-toggle nav-link"
-                    aria-expanded="false"
-                    data-bs-toggle="dropdown"
-                    href="#"
-                    ><i class="fas fa-search"></i
-                  ></a>
-                  <div
-                    class="dropdown-menu dropdown-menu-end p-3 animated--grow-in"
-                    aria-labelledby="searchDropdown"
-                  >
+                  <a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown"
+                    href="#">
+                    <i class="fas fa-search"></i>
+                </a>
+                  <div class="dropdown-menu dropdown-menu-end p-3 animated--grow-in" aria-labelledby="searchDropdown">
                     <form class="me-auto navbar-search w-100">
                       <div class="input-group">
-                        <input
-                          class="bg-light form-control border-0 small"
-                          type="text"
-                          placeholder="Search for ..."
-                        />
+                        <input class="bg-light form-control border-0 small" type="text" placeholder="Search for ..." />
                         <div class="input-group-append">
                           <button class="btn btn-primary py-0" type="button">
                             <i class="fas fa-search"></i>
@@ -117,59 +108,39 @@
                   </div>
                 </li>
 
-                <div class="d-none d-sm-block topbar-divider"></div>
-                <li class="nav-item dropdown no-arrow">
+
+                <div class="p-3 d-none d-sm-block topbar-divider"></div>
+                <li class="p-4 nav-item dropdown no-arrow">
                   <div class="nav-item dropdown no-arrow">
-                    <a
-                      class="dropdown-toggle nav-link"
-                      aria-expanded="false"
-                      data-bs-toggle="dropdown"
-                      href="#"
-                      >
+                    <a class="dropdown-toggle nav-link"  aria-expanded="false" data-bs-toggle="dropdown" href="#">
 <!-- TODO should show who is logged in -->
-                      <span class="d-none d-lg-inline me-2 text-white small"
-                        >User</span
-                      ><img
-                        class="border rounded-circle img-profile"
-                        src="/assets/img/avatars/avatar1.jpeg?h=0ecc82101fb9a10ca459432faa8c0656"
-                    /></a>
-                    <div
-                      class="dropdown-menu shadow dropdown-menu-end animated--grow-in"
-                    >
-                      <a class="dropdown-item" href="#"
-                        ><i
-                          class="fas fa-user fa-sm fa-fw me-2 text-gray-400"
-                        ></i
-                        >&nbsp;Profile</a
-                      ><a class="dropdown-item" href="#"
-                        ><i
-                          class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"
-                        ></i
-                        >&nbsp;Settings</a
-                      ><a class="dropdown-item" href="#"
-                        ><i
-                          class="fas fa-list fa-sm fa-fw me-2 text-gray-400"
-                        ></i
-                        >&nbsp;Activity log</a
-                      >
+                      <span class="d-none d-lg-inline me-2 text-white small">
+                        User &nbsp;</span>
+                        <img class="border rounded-circle img-profile" src="/assets/img/avatars/avatar1.jpeg?h=0ecc82101fb9a10ca459432faa8c0656" />
+                      </a>
+                    <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in">
+                      <a class="dropdown-item" routerLink="/profile" routerLinkActive="active" ariaCurrentWhenActive="page">
+                        <i class="fas fa-user fa-sm fa-fw me-2 text-gray-400" > </i>
+                        &nbsp; Profile</a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#"
-                        ><i
-                          class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"
-                        ></i
-                        >&nbsp;Logout</a
-                      >
+                      <a class="dropdown-item" href="#">
+                        <i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400" >
+                        </i>
+                        &nbsp; Logout</a>
                     </div>
                   </div>
                 </li>
               </ul>
             </div>
           </nav>
+
+         <div class="container-fluid" id="main">
           <h1 style="padding: 5px; margin: 5px">{{ title }}</h1>
 
 
+          <router-outlet></router-outlet>
           <!-- Start: Body -->
-          <H1>TEST JUST FOR THE MENUS AND FOOTER</H1>
+          <!-- <H1>TEST JUST FOR THE MENUS AND FOOTER</H1> -->
 <!-- <app-root></app-root> -->
 <!-- <app-home></app-home> -->
 <!-- <app-profile></app-profile> -->
@@ -181,7 +152,10 @@
 <!-- <app-login></app-login> -->
 <!-- <app-dash></app-dash> -->
 <!-- <app-projects></app-projects> -->
-          <!-- End: Body -->
+
+ <!-- End: Body -->
+</div>
+
         </div>
         <footer class="bg-white sticky-footer">
           <div class="container my-auto">
@@ -191,12 +165,11 @@
           </div>
         </footer>
       </div>
-      <a class="border rounded d-inline scroll-to-top" href="#page-top"
-        ><i class="fas fa-angle-up"></i
-      ></a>
+      <a class="border rounded d-inline scroll-to-top" href="#page-top">
+        <i class="fas fa-angle-up"></i>
+      </a>
     </div>
 
-<router-outlet></router-outlet>
 
 <!-- * * * * * * * * * * * * * * * ORIGINAL BELOW HERE * * * * * * * * * * * * * * * * -->
     <!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
