--- a/src/app/dash/dash.component.html
+++ b/src/app/dash/dash.component.html
@@ -1,17 +1,15 @@
-
+<!-- TODO: generate shopping list -->
 
 <div class="container-fluid">
   <div
     class="d-sm-flex justify-content-between align-items-center mb-4"
   >
-    <h3 class="text-dark mb-0">{{ title }} </h3>
-    <a
-      class="btn btn-primary btn-sm d-none d-sm-inline-block"
-      role="button"
-      href="#"
-      ><i class="fas fa-download fa-sm text-white-50"></i
-      >&nbsp;Generate Shopping List</a
-    >
+    <h3 class=" mb-0">{{ title }} </h3>
+    <!-- TODO shopping list in plain text, csv, excel & what else? -->
+    <a class="btn btn-primary btn-sm d-none d-sm-inline-block"
+      role="button" href="#" >
+      <i class="fas fa-download fa-sm text-white-50"></i >
+      &nbsp;Generate Shopping List</a>
   </div>
   <div class="row">
     <div class="col-12 col-sm-5 col-md-6 col-lg-3 col-xl-3 mb-4">
@@ -20,13 +18,13 @@
           <div class="row align-items-center no-gutters">
             <div class="col me-2">
               <div
-                class="text-uppercase text-primary fw-bold text-xs mb-1"
-              >
+                class="text-uppercase text-primary fw-bold text-xs mb-1">
+              <!-- top row cards -->
                 <span>Budget</span>
               </div>
               <div class="text-dark fw-bold h5 mb-0">
-                <!-- Start: dash-budget --><span>$500</span
-                ><!-- End: dash-budget -->
+                <!-- TODO sum of project budgets -->
+                <span>$500</span><!-- End: dash-budget -->
               </div>
             </div>
           </div>
@@ -44,7 +42,9 @@
                 <span>YTD Cost</span>
               </div>
               <div class="text-dark fw-bold h5 mb-0">
-                <!-- Start: dash-ytd --><span>$1000</span
+                <!-- Start: dash-ytd -->
+                <!-- TODO add cost of items purchased -->
+                <span>$1000</span
                 ><!-- End: dash-ytd -->
               </div>
             </div>
@@ -68,7 +68,9 @@
                 </div>
                 <div class="col">
                   <div class="text-dark fw-bold h5 mb-0">
-                    <!-- Start: UFO --><span>18</span
+                    <!-- Start: UFO -->
+                    <!-- TODO count of projects !complete -->
+                    <span>18</span
                     ><!-- End: UFO -->
                   </div>
                 </div>
@@ -78,9 +80,11 @@
         </div>
       </div>
     </div>
+    <!-- Shopping List Middle page start -->
     <div class="col-lg-12 mb-4">
       <div class="card shadow mb-4">
         <div class="card-header py-3">
+          <!-- TODO link to shopping list page from here -->
           <h6 class="text-primary fw-bold m-0">Shopping List</h6>
         </div>
         <ul class="list-group list-group-flush">
@@ -88,21 +92,21 @@
             <div class="row align-items-center no-gutters">
               <div class="col me-2">
                 <!-- Start: shopping-item -->
-                <h6 class="mb-0"><strong>Item</strong></h6>
-                <!-- End: shopping-item --><!-- Start: shopping-store --><span
+                <!-- ngfor loop for each item on the list limit 5 -->
+                <h6 class="mb-0"><strong> Item </strong></h6>
+                <span class="text-xs" style="margin: 5px"> Store</span
+                >
+                <span
                   class="text-xs"
                   style="margin: 5px"
-                  >Store</span
-                ><!-- End: shopping-store --><!-- Start: shopping-project --><span
-                  class="text-xs"
-                  style="margin: 5px"
-                  >Project</span
-                ><!-- End: shopping-project --><span
+                  >Project</span>
+                <span
                   class="text-xs"
                   style="margin: 5px"
                   >Cost</span
                 >
               </div>
+<!-- checkbox -->
               <div class="col-auto">
                 <div class="form-check">
                   <input
@@ -116,47 +120,7 @@
                 </div>
               </div>
             </div>
-          </li>
-          <li class="list-group-item">
-            <div class="row align-items-center no-gutters">
-              <div class="col me-2">
-                <h6 class="mb-0"><strong>Lunch meeting</strong></h6>
-                <span class="text-xs">11:30 AM</span>
-              </div>
-              <div class="col-auto">
-                <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    id="formCheck-2"
-                  /><label
-                    class="form-check-label"
-                    for="formCheck-2"
-                  ></label>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <div class="row align-items-center no-gutters">
-              <div class="col me-2">
-                <h6 class="mb-0"><strong>Lunch meeting</strong></h6>
-                <span class="text-xs">12:30 AM</span>
-              </div>
-              <div class="col-auto">
-                <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    id="formCheck-3"
-                  /><label
-                    class="form-check-label"
-                    for="formCheck-3"
-                  ></label>
-                </div>
-              </div>
-            </div>
-          </li>
+
         </ul>
       </div>
     </div>
@@ -170,6 +134,8 @@
         <div class="col-lg-12 mb-4">
           <div class="card text-white bg-primary shadow">
             <div class="card-body">
+              <!-- TODO assign colors not started blue(primary), In progress green(success), missing supplies red (danger)
+              TODO ngfor loop top 5 projects and ngif based on colors -->
               <p class="m-0">Not started Blue</p>
               <p class="text-white-50 small m-0">Description</p>
             </div>
