--- a/src/app/projectform/projectform.component.html
+++ b/src/app/projectform/projectform.component.html
@@ -1,62 +1,40 @@
 <!-- TODO connect and get each form piece running one at a time-->
 
 
-<div class="container">
+<div class="container text-black">
   <form>
-    <div class="row" style="padding: 5px">
+    <div class="row" style="padding: 5px;">
       <div class="col-lg-2">
-        <label
-          class="col-form-label"
-          data-bs-toggle="tooltip"
-          data-bss-tooltip=""
-          data-bs-placement="right"
-          title="Add only one project"
-          for="project"
-          >{{ title }} Name</label
-        >
+        <label class="col-form-label" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="right"
+          title="Add only one project" for="project">{{ title }} Name</label>
       </div>
       <div class="col-lg-3">
 
         <!-- TODO Project Name Input -->
-
-        <input
-          class="form-control flex-grow-1 flex-shrink-1 flex-fill flex-wrap"
-          type="text"
-          style="height: 38px; margin: 3px"
-          required=""
-          name="project"
-          placeholder="Project Name"
-        />
+        <!-- TODO this is two way binding using ngModel-->
+        <input class="form-control flex-grow-1 flex-shrink-1 flex-fill flex-wrap" type="text"
+          style=" border: 1px solid black; height: 38px; margin: 3px" required="" name="project"
+          placeholder="Project Name" [(ngModel)]="projectName" />
+        <!-- on change event -->
+        <p>{{projectName}}</p>
       </div>
       <div class="col-lg-2">
 
-     <!-- TODO Project image upload -->
+        <!-- TODO Project image upload -->
 
-        <label
-          class="col-form-label"
-          data-bs-toggle="tooltip"
-          data-bss-tooltip=""
-          data-bs-placement="right"
-          style="margin-right: 28px"
-          for="image"
-          title="More than one can be added"
-          >Images</label
-        >
+        <label class="col-form-label" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="right"
+          style="margin-right: 28px" for="image" title="More than one can be added">
+          Images</label>
       </div>
       <div class="col">
-        <input
-          class="form-control"
-          type="file"
-          style="margin: 5px"
-          name="images"
-          accept="image/*"
-        /><img style="margin: 5px" /><img style="margin: 5px" /><img
-          style="margin: 5px"
-        /><img style="margin: 5px" />
+        <input class="form-control" type="file" style="margin: 5px" name="images" accept="image/*" />
+        <!-- ngFor upload-->
+        <img style="margin: 5px" />
+        <img style="margin: 5px" />
+        <img style="margin: 5px" />
+        <img style="margin: 5px" />
       </div>
-      <div class="w-100"></div>
     </div>
-
     <!-- TODO description text box -->
 
     <div class="row">
@@ -64,12 +42,8 @@
         <label class="col-form-label">Description</label>
       </div>
       <div class="col-lg-5">
-        <textarea
-          class="form-control"
-          style="height: 137px; margin: 3px"
-          name="project-description "
-          placeholder="Describe and add details about the project"
-        ></textarea>
+        <textarea class="form-control" style="height: 137px; margin: 3px;  border: 1px solid black; "
+          name="project-description " placeholder="Describe and add details about the project"></textarea>
       </div>
 
       <!-- TODO tags entry -->
@@ -78,139 +52,95 @@
         <label class="col-form-label">Tags</label>
       </div>
       <div class="col">
-        <input
-          class="form-control"
-          type="text"
-          autocomplete="on"
-          autofocus=""
-          style="margin: 3px"
-          name="tags"
-          placeholder="Add Tags to aid in searching for this project"
-        />
-        <!-- TODO tags results *ngif to repeat results button-->
-        <button class="btn btn-primary" type="button" style="margin: 5px" >  Results</button >
+        <input class="form-control" type="text" autocomplete="on" autofocus=""
+          style="margin: 3px;  border: 1px solid black; " name="tags"
+          placeholder="Add Tags to aid in searching for this project" />
+        <!-- TODO tags results *ngif to repeat results button ngFor-->
+        <button class="btn btn-primary" type="button" style="margin: 5px">
+          Tag Results
+        </button>
       </div>
     </div>
 
-
+    <!-- spacing line -->
+    <div class="w-100"> </div>
 
     <div class="row">
       <div class="col-lg-2" style="height: 41px">
         <label class="col-form-label">Category</label>
       </div>
       <div class="col">
-        <input
-          class="form-control"
-          type="text"
-          autocomplete="on"
-          autofocus=""
-          style="margin: 3px"
-          name="category"
-          placeholder="Add a category or more than one"
-        /><button
-          class="btn btn-primary"
-          type="button"
-          style="margin: 5px"
-        >
-          Button
+        <input class="form-control" type="text" autocomplete="on" autofocus=""
+          style="margin: 3px;  border: 1px solid black; " name="category"
+          placeholder="Add a category or more than one" />
+
+        <button class="btn btn-primary" type="button" style="margin: 5px">
+          <!-- ngFor -->
+          Category Results
         </button>
       </div>
+
+
       <div class="col-lg-1">
         <label class="col-form-label">Location</label>
       </div>
       <div class="col">
-        <input
-          class="form-control"
-          type="text"
-          autocomplete="on"
-          autofocus=""
-          style="margin: 5px"
-          name="location"
-          placeholder="Describe the Container &amp; Location"
-        /><button
-          class="btn btn-primary"
-          type="button"
-          style="margin: 5px"
-        >
-          Button
+        <input class="form-control" type="text" autocomplete="on" autofocus=""
+          style="margin: 5px;  border: 1px solid black; " name="location"
+          placeholder="Describe the Container &amp; Location" />
+        <button class="btn btn-primary" type="button" style="margin: 5px">
+          <!-- TODO ngfor -->
+          Location Results
         </button>
       </div>
+
     </div>
+
+    <!-- ngif -->
+
     <div class="row">
       <div class="col">
         <div class="form-check form-switch form-check-inline">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="formCheck-3"
-          /><label class="form-check-label" for="formCheck-3"
-            >Not Started</label
-          >
+          <input class="form-check-input" type="checkbox" id="formCheck-3" />
+          <label class="form-check-label" for="formCheck-3">
+            Not Started</label>
+        </div>
+
+        <!-- toggle buttons -->
+        <div class="form-check form-switch form-check-inline">
+          <input class="form-check-input" type="checkbox" id="formCheck-5" /><label class="form-check-label"
+            for="formCheck-5">In Progress</label>
         </div>
         <div class="form-check form-switch form-check-inline">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="formCheck-5"
-          /><label class="form-check-label" for="formCheck-5"
-            >In Progress</label
-          >
+          <input class="form-check-input" type="checkbox" id="formCheck-7" /><label class="form-check-label"
+            for="formCheck-7">Missing Supplies</label>
         </div>
         <div class="form-check form-switch form-check-inline">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="formCheck-7"
-          /><label class="form-check-label" for="formCheck-7"
-            >Missing Supplies</label
-          >
+          <input class="form-check-input" type="checkbox" id="formCheck-6" /><label class="form-check-label"
+            for="formCheck-6">UFO</label>
         </div>
         <div class="form-check form-switch form-check-inline">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="formCheck-6"
-          /><label class="form-check-label" for="formCheck-6"
-            >UFO</label
-          >
-        </div>
-        <div class="form-check form-switch form-check-inline">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="formCheck-4"
-          /><label class="form-check-label" for="formCheck-4"
-            >Completed</label
-          >
+          <input class="form-check-input" type="checkbox" id="formCheck-4" /><label class="form-check-label"
+            for="formCheck-4">Completed</label>
         </div>
       </div>
     </div>
-    <div class="row">
+
+    <!-- SUPPLIES LIST -->
+    <div class="row mt-3 mb-2">
       <div class="col-lg-1">
         <label class="col-form-label">Item</label>
       </div>
       <div class="col">
-        <input
-          class="form-control flex-grow-1 flex-shrink-1"
-          type="text"
-          autocomplete="on"
-          autofocus=""
-          name="supply-item"
-          placeholder="What do you need?"
-        />
+        <input class="form-control flex-grow-1 flex-shrink-1" type="text" autocomplete="on" autofocus=""
+          name="supply-item" placeholder="What do you need?" style=" border: 1px solid black; " />
       </div>
       <div class="col-lg-1">
         <label class="col-form-label">Quantity</label>
       </div>
       <div class="col">
-        <input
-          class="form-control flex-grow-1 flex-shrink-1"
-          type="text"
-          autocomplete="on"
-          autofocus=""
-          placeholder="How much do you need?"
-          name="qty"
-        />
+        <input class="form-control flex-grow-1 flex-shrink-1" type="text" autocomplete="on"
+          style=" border: 1px solid black; " autofocus="" placeholder="How much do you need?" name="qty" />
       </div>
     </div>
     <div class="row">
@@ -218,39 +148,48 @@
         <label class="col-form-label">Description</label>
       </div>
       <div class="col">
-        <textarea
-          class="form-control flex-grow-1 flex-shrink-1"
-          autofocus=""
-          name="supply-description"
-          placeholder="Add details about the supply item such as color, sizes or styles"
-          rows="4"
-        ></textarea>
+        <textarea class="form-control flex-grow-1 flex-shrink-1" autofocus="" name="supply-description"
+          placeholder="Add details about the supply item such as color, sizes or styles" rows="4"
+          style=" border: 1px solid black; ">
+        </textarea>
+
+
+        <input class="form-control flex-grow-1 flex-shrink-1 flex-fill flex-wrap" type="text"
+        style=" border: 1px solid black; height: 38px; margin: 3px" required="" name="project"
+        placeholder="Project Name" [(ngModel)]="projectName" />
+      <!-- on change event -->
+      <p>{{projectName}}</p>
+
+
+        <button class=" m-3 btn btn-primary">Add to Supplies List for This Project</button>
       </div>
     </div>
+
+    <!-- supply list -->
     <div class="row">
       <div class="col">
         <div class="card">
           <div class="card-body flex-grow-1 flex-shrink-1 flex-wrap">
-            <h4 class="card-title">Item Name</h4>
+            <h4 class="card-title">Supplies Item Name</h4>
+
+            <!-- on change event -->
+            <p>{{projectName}}</p>
+          </div>
+          <div class="col-lg-2 m-3">
+
+            <!-- the description text should target here -->
             <p>Description</p>
+            <p>supply description here</p>
             <p>Qty</p>
+            <p>qty here</p>
             <div class="form-check form-switch">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                id="formCheck-1"
-              /><label class="form-check-label" for="formCheck-1"
-                >Check Stash</label
-              >
+              <!-- this should check the stash and determine if the item needs to be added to the shopping list -->
+              <input class="form-check-input" type="checkbox" id="formCheck-1" />
+              <label class="form-check-label" for="formCheck-1"> Check Stash</label>
             </div>
             <div class="form-check form-switch">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                id="formCheck-2"
-              /><label class="form-check-label" for="formCheck-2"
-                >Add to Shopping List</label
-              >
+              <input class="form-check-input" type="checkbox" id="formCheck-2" />
+              <label class="form-check-label" for="formCheck-2">Add to Shopping List</label>
             </div>
           </div>
         </div>
@@ -258,11 +197,7 @@
     </div>
     <div class="row">
       <div class="col" style="margin: 5px">
-        <button
-          class="btn btn-primary flex-grow-1 flex-shrink-1"
-          type="submit"
-          style="margin: 3px"
-        >
+        <button class="btn btn-primary flex-grow-1 flex-shrink-1" type="submit" style="margin: 3px">
           Save
         </button>
       </div>
