--- a/src/app/dash/dash.component.html
+++ b/src/app/dash/dash.component.html
@@ -5,11 +5,12 @@
     class="d-sm-flex justify-content-between align-items-center mb-4"
   >
     <h3 class=" mb-0">{{ title }} </h3>
-    <!-- TODO shopping list in plain text, csv, excel & what else? -->
+    <!-- TODO shopping list in to a shopping list page until can figure out how to display the list in plain text, csv, excel & what else? -->
     <a class="btn btn-primary btn-sm d-none d-sm-inline-block"
-      role="button" href="#" >
-      <i class="fas fa-download fa-sm text-white-50"></i >
-      &nbsp;Generate Shopping List</a>
+      role="button" routerLink="/shopping" routerLinkActive="active" ariaCurrentWhenActive="page"class="nav-link" >
+        <i class="fas fa-shopping-bag"></i>
+    <!-- to the shopping list page -->
+      &nbsp; Generate Shopping List</a>
   </div>
   <div class="row">
     <div class="col-12 col-sm-5 col-md-6 col-lg-3 col-xl-3 mb-4">
