--- a/src/app/stash/stash.component.html
+++ b/src/app/stash/stash.component.html
@@ -8,18 +8,24 @@
         stash.
       </p>
     </div>
+<!-- TODO add new item button link to the form -->
+<div class="btn btn-primary col-3 py-2">
+<button type="button" class="btn" routerLink="/stashform" routerLinkActive="active" ariaCurrentWhenActive="page"
+class="nav-link"> New Item for the Stash
+</button>
+</div>
+
     <div class="card-body">
       <div class="row">
         <div class="col-md-6 text-nowrap">
           <div
             id="dataTable_length"
             class="dataTables_length"
-            aria-controls="dataTable"
-          >
-            <label class="form-label"
-              >Show&nbsp;<select
-                class="d-inline-block form-select form-select-sm"
-              >
+            aria-controls="dataTable">
+
+            <label class="form-label" >
+               Show &nbsp;
+               <select class="d-inline-block form-select form-select-sm">
                 <option value="10" selected="">5</option>
                 <option value="10">10</option>
                 <option value="20">20</option></select
@@ -28,28 +34,16 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div
-            class="text-md-end dataTables_filter"
-            id="dataTable_filter"
-          >
-            <label class="form-label"
-              ><input
-                type="search"
-                class="form-control form-control-sm"
-                aria-controls="dataTable"
-                placeholder="Search"
-            /></label>
+          <div  class="text-md-end dataTables_filter" id="dataTable_filter" >
+            <label class="form-label" >
+              <input type="search" class="form-control form-control-sm" aria-controls="dataTable" placeholder="Search" /></label>
           </div>
         </div>
       </div>
-      <div
-        class="table-responsive table mt-2"
-        id="dataTable"
-        role="grid"
-        aria-describedby="dataTable_info"
-      >
+      <div  class="table-responsive table mt-2" id="dataTable" role="grid" aria-describedby="dataTable_info" >
         <table class="table my-0" id="dataTable">
           <thead>
+
             <tr>
               <th>Item</th>
               <th>Description</th>
@@ -58,166 +52,35 @@
             </tr>
           </thead>
           <tbody>
+               <!-- TODO ngFor loop -->
             <tr>
               <td>
-                <img
-                  class="img-thumbnail me-2"
-                  width="50"
-                  height="50"
-                  src="/assets/img/avatars/avatar1.jpeg?h=0ecc82101fb9a10ca459432faa8c0656"
-                  loading="lazy"
-                />Item
+                <img class="img-thumbnail me-2" width="50" height="50" src="/assets/img/avatars/avatar1.jpeg?h=0ecc82101fb9a10ca459432faa8c0656" loading="lazy"  />
+                Item
               </td>
               <td>5 words only go here</td>
               <td>First location</td>
               <td>one status</td>
             </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar2.jpeg?h=5d142be9441885f0935b84cf739d4112"
-                />Angelica Ramos
-              </td>
-              <td>Chief Executive Officer(CEO)</td>
-              <td>London</td>
-              <td>47</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar3.jpeg?h=c5166867f10a4e454b5b2ae8d63268b3"
-                />Ashton Cox
-              </td>
-              <td>Junior Technical Author</td>
-              <td>San Francisco</td>
-              <td>66</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar4.jpeg?h=fefb30b61c8459a66bd338b7d790c3d5"
-                />Bradley Greer
-              </td>
-              <td>Software Engineer</td>
-              <td>London</td>
-              <td>41</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar5.jpeg?h=35dc45edbcda6b3fc752dab2b0f082ea"
-                />Brenden Wagner
-              </td>
-              <td>Software Engineer</td>
-              <td>San Francisco</td>
-              <td>28</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar1.jpeg?h=0ecc82101fb9a10ca459432faa8c0656"
-                />Brielle Williamson
-              </td>
-              <td>Integration Specialist</td>
-              <td>New York</td>
-              <td>61</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar2.jpeg?h=5d142be9441885f0935b84cf739d4112"
-                />Bruno Nash<br />
-              </td>
-              <td>Software Engineer</td>
-              <td>London</td>
-              <td>38</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar3.jpeg?h=c5166867f10a4e454b5b2ae8d63268b3"
-                />Caesar Vance
-              </td>
-              <td>Pre-Sales Support</td>
-              <td>New York</td>
-              <td>21</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar4.jpeg?h=fefb30b61c8459a66bd338b7d790c3d5"
-                />Cara Stevens
-              </td>
-              <td>Sales Assistant</td>
-              <td>New York</td>
-              <td>46</td>
-            </tr>
-            <tr>
-              <td>
-                <img
-                  class="rounded-circle me-2"
-                  width="30"
-                  height="30"
-                  src="/assets/img/avatars/avatar5.jpeg?h=35dc45edbcda6b3fc752dab2b0f082ea"
-                />Cedric Kelly
-              </td>
-              <td>Senior JavaScript Developer</td>
-              <td>Edinburgh</td>
-              <td>22</td>
-            </tr>
+
           </tbody>
-          <tfoot>
-            <tr>
-              <td></td>
-              <td></td>
-            </tr>
-          </tfoot>
+
         </table>
       </div>
       <div class="row">
         <div class="col-md-6 align-self-center">
-          <p
-            id="dataTable_info"
-            class="dataTables_info"
-            role="status"
-            aria-live="polite"
-          >
+          <p id="dataTable_info" class="dataTables_info" role="status" aria-live="polite" >
             Showing 1 to 5 of 27
           </p>
         </div>
         <div class="col-md-6">
-          <nav
-            class="d-lg-flex justify-content-lg-end dataTables_paginate paging_simple_numbers"
+          <nav class="d-lg-flex justify-content-lg-end dataTables_paginate paging_simple_numbers"
           >
             <ul class="pagination">
               <li class="page-item disabled">
-                <a class="page-link" aria-label="Previous" href="#"
-                  ><span aria-hidden="true">«</span></a
-                >
+                <a class="page-link" aria-label="Previous" href="#" >
+                  <span aria-hidden="true">«</span></a >
+
               </li>
               <li class="page-item active">
                 <a class="page-link" href="#">1</a>
